edits through chapters 1 - 3

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -41,7 +41,7 @@
 %\section{Collaboration Governance Objectives/Preamble}
 \section{Preamble}
 
-The purpose of the CMB-S4 Science Collaboration is to conduct a CMB science program centered on the future Stage-4 ground-based CMB experiment, CMB-S4. The Collaboration activities include advocating for, and advancing the design of, CMB-S4. The Collaboration is expected to play a major role in the establishment of the CMB-S4 construction project and in its operations, and the Collaboration is expected to lead the scientific analysis. 
+The purpose of the CMB-S4 Science Collaboration is to conduct a  science program centered on the future Stage-4 ground-based cosmic microwave background (CMB) experiment, CMB-S4. The Collaboration activities include advocating for, and advancing the design of, CMB-S4. The Collaboration is expected to play a major role in the establishment of the CMB-S4 construction project and in its operations, and the Collaboration is expected to lead the scientific analysis. 
 %construction and operation of the future Stage-4 %experiment that is intended to be the definitive 
 CMB-S4 will deliver a highly constraining data set with which any model for the origin of the primordial fluctuations---be it inflation or an alternative theory---and their evolution to the structure seen in the Universe today must be consistent. 
 This document outlines the CMB-S4 collaboration governance and organization of scientific activities.
@@ -80,7 +80,7 @@ Throughout this document,  a ``supermajority vote" is defined as a result with m
 
 
 \section{Overall Structure}
-The Governance Structure of the CMB-S4 collaboration consists of three bodies: a Governing Board (GB), an \exec \ (\shorte), and two equal co-spokespersons (SP). 
+The Governance Structure of the CMB-S4 collaboration consists of three bodies: a Governing Board (GB), an \exec \ (\shorte) led by two equal co-spokespersons (SP). 
 Under each of these bodies a number of councils, committees, and working groups are established to ensure timely and efficient conduction of the duties assigned to each body. The overall scope, selection of, and interplay between each of these governing entities is described in the remainder of this document. 
 
 
@@ -94,11 +94,12 @@ Under each of these bodies a number of councils, committees, and working groups 
 
 \section{Governing Board}
 
-The Governing Board (GB), a body whose composition is designed to be representative of the membership of the collaboration as a whole, is the ultimate policy forming body of the CMB-S4 collaboration. 
+The Governing Board (GB), a body whose composition is designed to be representative of the membership of the collaboration as a whole, is the %ultimate 
+policy forming body of the CMB-S4 collaboration. 
 
 \subsection{Scope}
-The Governing Board has two main roles: to facilitate discussion of collaboration-wide issues---especially those that concern the self-governance of CMB-S4 Collaboration as a whole---and to provide oversight of both the \exec \ and the co-spokepersons.
-Governing Board activities include, but are not limited to: 
+The Governing Board has two main roles: to facilitate discussion of collaboration-wide issues---especially those that concern the self-governance of CMB-S4 Collaboration---and to provide oversight of the co-spokespersons and the \exec. %and the co-spokepersons.
+Governing Board activities include, but are not limited to:  %omitted "Collaboration as a whole---
 
 \begin{itemize}
 \item Approval and revision of Collaboration Bylaws; amendment of the Bylaws requires a super-majority of the GB. This excludes any Bylaws that directly pertain the power, scope, election, etc. of the GB, which will be discussed in Section \ref{subsec:amend}.
@@ -129,7 +130,7 @@ Governing Board activities include, but are not limited to:
 
 \subsection{Board Representation}
 The GB will be composed of 17 members. 
-To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to the election the GB---or the ICCC for first election---will define various categories of representation it is deemed important to include on the GB (possibly including e.g., ``Tenure Track" early career scientists,  historically underrepresented groups, partner countries with significant membership, members of small institutions, etc). Both the GB and spokespersons---or the ICCC for first election---should particularly encourage suitable candidates in each of these categories to self-nominate for board membership.
+To ensure that the board is truly ``\textbf{representative}'' of the collaboration, prior to the election the GB---or the ICCC for first election---will define various categories of representation it is deemed important to include on the GB (possibly including e.g., ``Tenure Track" early career scientists,  historically underrepresented groups, partner countries with significant membership, members of small institutions, \textcolor{red}{representatives of existing CMB programs}, etc). Both the GB and spokespersons---or the ICCC for first election---should particularly encourage suitable candidates in each of these categories to self-nominate for board membership.
 
 The length of a term of service for a Governing Board member is two years; members are allowed to serve at most two terms consecutively.
 Further details on the election of GB members are provided in Section \ref{sec:elections}.
@@ -137,22 +138,28 @@ Further details on the election of GB members are provided in Section \ref{sec:e
 
 \subsection{Governing Board Chair}
 
-The GB chair is responsible for scheduling GB meetings, distributing the agendas, chairing the meetings, and distributing the minutes. The GB secretary can be delegated to take and distribute the minutes. 
+The GB chair is responsible for scheduling GB meetings, distributing the agendas, chairing the meetings, and distributing the minutes. The GB vice chair will reside if the chair is absent. A GB secretary will be delegated to take and distribute the minutes. 
 
 \subsection{Election of the Governing Board Chair}
-The GB chair will be elected from amongst the board members. 
-Every year, starting with the inception of the GB, the chair of the GB is elected from the GB membership to serve a one-year term. GB members nominate candidates by email and then vote by email, with the votes in both cases tabulated in secret by a third party agreed upon by the GB at large. The candidate with the most votes becomes the GB chair. In case of a tie, a runoff election is held. In case of a tie in the final runoff, the chair will recuse him/herself from the vote to resolve the tie, but otherwise he/she is eligible to vote in the election. The secretary of the GB, should one be used, is chosen informally by the chairman of the GB to serve during his or her term. \Comment{1 year chair term to deal with staggered board elections}
+%The GB chair and vice chair will be elected from amongst the board members. 
+Every year, starting with the inception of the GB, the chair and vice chair of the GB are elected from the GB membership to serve a one-year term. 
+% GB members nominate candidates by email and then vote by email, with the votes in both cases tabulated in secret by a third party agreed upon by the GB at large. The candidate with the most votes becomes the GB chair. In case of a tie, a runoff election is held. In case of a tie in the final runoff, the chair will recuse him/herself from the vote to resolve the tie, but otherwise he/she is eligible to vote in the election. 
+The secretary of the GB, should one be used, 
+is chosen informally by the GB chair to serve during their term. \Comment{1 year chair term to deal with staggered board elections}
 
 
 \subsection{Governing Board Meetings}
-\textit{The first chaired Governing Board will establish rules for its meetings}. This first meeting will be held no later than 2 months after the selection of the board.  It is expected that the board will meet no less than every two months to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request a GB representative. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
-GB votes can be held by email. Minutes of the GB meetings are distributed to the full CMB S4-collaboration by the GB chair or GB secretary. These minutes must include meeting attendance and the records of the votes cast by all GB members. It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two year term.  
+\textit{The first chaired Governing Board will establish rules for its meetings}. This first meeting will be held no later than 2 months after the selection of the board.  It is expected that the board will meet no less than quarterly to ensure adequate attention to its duties. Such meetings will likely occur in closed session at every CMB-S4 collaboration meeting and in meetings held by telephone or video conference. Special meetings can be called on the initiative of the GB chair or at the request a GB representative. Each meeting requires a quorum to conduct official GB business. Two-thirds of the GB members must cast votes (including abstentions) for a vote to be valid.  
+GB votes can be held by email. Summary minutes of the GB meetings are distributed to the full CMB S4-collaboration by the GB chair or GB secretary. These minutes must include meeting attendance and the %records of the votes cast by all GB members.
+results of any votes taken.
+ It is the expectation that GB members participate in the majority of meetings. If a GB member fails to participate (via meeting attendance or email) in $\ge 50\%$ of GB meetings in a year, their seat will be open to election during the following cycle and they will be barred from the board for a two year term.  
 
 \subsection{Election and Voting Commission}
 The GB appoints the chair and two additional members of the Election and Voting Commission (EVC).  The EVC is charged with conducting elections as spelled out in \S\ref{sec:elections}. The EVC acts \textbf{independently} of the GB, but any points of substantive disagreement amongst the members should be referred back to the GB.  Commission members serve two-year terms ordinarily.  However, the GB may choose to extend the first term of the chair to  three years, to allow staggering of the membership for improved continuity between commissions.   Commission members may be removed with a supermajority vote of the GB.
  % , with the exception of the chair who will serve a three-year term at the start of the collaboration (the chair position is a 2 year term thereafter) to enable a continuity between commissions. There are no term limits for this commission. 
-\subsection{Amendments to the Governing Board Bylaws by the Governing Board} \label{subsec:amend}
-Any amendments made by the Governing Board that pertain to its own election,governance, and scope must be ratified by a majority of the voting members of the collaboration.
+ 
+\subsection{Amendments to the Bylaws pertaining to the Governing Board} \label{subsec:amend}
+Any amendments made by the Governing Board that pertain to its own election, governance and scope must be ratified by a majority in a vote of the collaboration membership.
 
 
 \section{Co-Spokespersons}
