edits in Chapter 4

--- a/bylaws.tex
+++ b/bylaws.tex
@@ -167,24 +167,33 @@ Any amendments made by the Governing Board that pertain to its own election, gov
 
 \subsection{Scope}
 
-The	scientific leadership of the CMB-S4 collaboration resides with two equal co-spokespersons.			
+The	%scientific 
+leadership of the CMB-S4 collaboration resides with two equal co-spokespersons.			
 Each spokesperson participates actively in the management of all aspects of the	collaboration and, as the executive officials of the Collaboration are responsible for its day-to-day management. 
-To carry out their duties, the spokespersons are expected to solicit advice from the collaboration at large, the Governing Board, and the	
-\exec \ on scientific, technical, management, financial, and leadership issues.  
+To carry out their duties, the spokespersons are expected to solicit advice from the collaboration at large, the Governing Board and the	
+\exec. %on scientific, technical, management, financial, and leadership issues.  
+The co-spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant collaboration members. Such appointees required approval by the GB, 
+and may be removed from the \exec\ at the co-spokespersons' discretion.  Appointments are limited to 2 years, but may be renewed with approval of the GB. 
+
+
 Duties include, but are not limited to the following: 
 \begin{itemize}
-\item Serving as the primary contacts with a  host laboratory/institution (if one exists), the funding agencies, scientific organizations, and the press. Reports on such activities will be provided on a semi-annual basis or by request to the Governing Board.
+\item Serving as the primary interface of the Collaboration with the Project (once established), partnering institutions, the government agencies, private and public funding institutions, scientific organizations, and the media. Reports on such activities will be provided on a semi-annual basis or by request to the Governing Board.
+%Serving as the primary contact with a  host laboratory/institution (if one exists), the funding agencies, scientific organizations, and the press. Reports on such activities will be provided on a semi-annual basis or by request to the Governing Board.
 \item Assuring public dissemination of scientific results. 
 \item Creation of short-term ad hoc committees for the purpose of such tasks as creation of review materials, white papers, exploration of new partnerships, etc.
 \item Organizing and running collaboration meetings. 
-\item The co-spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant collaboration members. Such appointees will be approved by the GB, 
-and may be removed from the board at the co-spokespersons' discretion. Appointments are limited to 2 years, but may be renewed with approval of the GB. 
+%\item The co-spokespersons may appoint up to two members of the \exec. This appointment flexibility will enable the SPs to obtain expert advice on an as-needed, short-term basis for matters including (but not limited to) technical and managerial topics that may be outside the expertise of extant collaboration members. Such appointees will be approved by the GB,  and may be removed from the board at the co-spokespersons' discretion. Appointments are limited to 2 years, but may be renewed with approval of the GB. 
 \item Carrying out other duties as charged to them by the Governing Board.
+
+\item Serving as ex-officio, non-voting members of the Governing Board.
 
 
 \end{itemize}
-Additionally,the co-spokespersons are ex-officio, non-voting members of the Governing Board.  \textit{The Governing Board, via super-majority vote, may amend these duties.} 
-Spokespersons are elected to two-year terms. \textbf{There are no term limits specified at this time, but term limits of 2 terms are to be imposed once CMB-S4 is more established as a project}. The election process is detailed below in Section \ref{sec:elections}. 
+
+%Additionally, the co-spokespersons are ex-officio, non-voting members of the Governing Board.  
+%\textit{The Governing Board, via super-majority vote, may amend these duties.} 
+Spokespersons are elected to two-year terms. \textbf{There are no term limits specified until the Project is established. After the establishment of the Project, term limits of 2 terms are expected to be imposed once CMB-S4 is more established as a project}. The election process is detailed below in Section \ref{sec:elections}. 
 
 \subsection{Removal of a Spokesperson}
 
